Improved received property handling in both main methods.